// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders button correctly 1`] = `
<button
  onClick={[MockFunction]}
  type="button"
>
  AC
</button>
`;

exports[`renders display correctly 1`] = `
<div
  className="display"
>
  <h2>
    0
  </h2>
</div>
`;

exports[`renders home page 1`] = `
<div>
  <nav
    className="nav"
  >
    <h1>
      Math Magicians
    </h1>
    <ul
      className="nav_menu"
    >
      <li>
        <a
          href="/"
        >
          Home
        </a>
      </li>
      <li>
        <a
          href="/calculator"
        >
          Calculator
        </a>
      </li>
      <li>
        <a
          href="/quotes"
        >
          Quotes
        </a>
      </li>
    </ul>
  </nav>
  <h1>
    Welcome to our page!
  </h1>
  <p>
    This is my calculator app, developed using react sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui o!cia deserunt mollit anim id est laborum. Ipsu
  </p>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui o!cia deserunt mollit anim id est laborum. Ipsu
  </p>
</div>
`;

exports[`renders quotes page 1`] = `
<div>
  <nav
    className="nav"
  >
    <h1>
      Math Magicians
    </h1>
    <ul
      className="nav_menu"
    >
      <li>
        <a
          href="/"
        >
          Home
        </a>
      </li>
      <li>
        <a
          href="/calculator"
        >
          Calculator
        </a>
      </li>
      <li>
        <a
          href="/quotes"
        >
          Quotes
        </a>
      </li>
    </ul>
  </nav>
  <h1>
    Welcome
  </h1>
  <p>
    Mathematics is not about numbers, equations, computations, or algorithms: it is about understanding. –William Paul Thurston
  </p>
</div>
`;
